Ajout de l'arbre manuscrit des descendants de Salabert.

--- a/content/c900-genealogie.html
+++ b/content/c900-genealogie.html
@@ -4,6 +4,13 @@ weight: 900
 type: docs
 ---
 <h1>Généalogie des différentes branches de la famille</h1>
+<h2>Arbre manuscrit des descendants</h2>
+<figure class="fig intense">
+    <img src="/img/arbre_descendants.png">
+    <figcaption>
+            <h4>Arbre manuscrit des descendants de Salabert Chauviteau</h4>
+    </figcaption>
+</figure>
 <H2>Index des patronymes</H2>
 <P> <A HREF="#I1">Aloy</A>(1), <A HREF="#I2">Amblard</A>(1), <A HREF="#I3">Audebert</A>(2),
     <A HREF="#I5">Audouin</A>(1), <A HREF="#I6">Auger</A>(1)</P>
