--- a/content/c900-genealogie.html
+++ b/content/c900-genealogie.html
@@ -4,11 +4,18 @@ weight: 900
 type: docs
 ---
 <h1>Généalogie des différentes branches de la famille</h1>
-<h2>Arbre manuscrit des descendants</h2>
+<h2>Arbre des descendants</h2>
 <figure class="fig intense">
     <img src="/img/arbre_descendants.png">
     <figcaption>
             <h4>Arbre manuscrit des descendants de Salabert Chauviteau</h4>
+    </figcaption>
+</figure>
+<h2>Arbre avec les branches Bioche Aloy Guenet</h2>
+<figure class="fig">
+    <a href="/img/arbre_branches_bioche_aloy_guenet.png" target="_blank"><img src="/img/arbre_branches_bioche_aloy_guenet.png"></a>
+    <figcaption>
+            <h4>Arbre manuscrit avec les branches latérales Bioche Aloy Guenet</h4>
     </figcaption>
 </figure>
 <H2>Index des patronymes</H2>
