Actualité et mises à jour.

--- a/content/c900-genealogie.html
+++ b/content/c900-genealogie.html
@@ -12,10 +12,10 @@ type: docs
     </figcaption>
 </figure>
 <h2>Arbre avec les branches Bioche Aloy Guenet</h2>
-<figure class="fig">
-    <a href="/img/arbre_branches_bioche_aloy_guenet.png" target="_blank"><img src="/img/arbre_branches_bioche_aloy_guenet.png"></a>
+<figure class="fig intense">
+    <img src="/img/arbre_branches_bioche_aloy_guenet.png">
     <figcaption>
-            <h4>Arbre manuscrit avec les branches latérales Bioche Aloy Guenet</h4>
+            <h4>Arbre manuscrit avec les branches latérales Bioche Aloy Guenet (<a href="/img/arbre_branches_bioche_aloy_guenet.png" target="_blank">voir ici la taille originale</a>)</h4>
     </figcaption>
 </figure>
 <H2>Index des patronymes</H2>
